unit_tests/preprocessor/errors/forbid-absolute-include.correct
preprocessor/errors/forbid-absolute-include:1: error: Absolute paths in #include directives are forbidden
